[project]
name = "voctomix"
version = "2.4"
description = "voctomix is a video mixing software, written in python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "scipy>=1.15.2",
    "scipy-stubs>=1.15.2.1",
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=9.0.3",
    "pygobject-stubs (>=2.13.0, <2.17.0)",
    "mypy>=1.15.0",
    "pytest-cov>=7.1.0",
    "sphinx>=7",
    "sphinx-wagtail-theme>=6",
]

[tool.uv]
python-preference = "only-system"
config-settings-package = { pygobject-stubs = { config = "Gtk3,Gdk3" } }

[tool.mypy]
mypy_path = "python_stubs"
exclude = "tests|venv"

[[tool.mypy.overrides]]
module = ["cairo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "voctocore/tests",
    "voctogui/tests",
]
